Correction Alternance.html

--- a/public/project/alternance.html
+++ b/public/project/alternance.html
@@ -31,7 +31,7 @@
             <div class="description">
                 <div class="description-left">
                     <div class="description-picture-area">
-                        <img src="../img/lycée.jpg" class="description-picture">
+                        <img src="../img/lycee.jpg" class="description-picture">
                     </div>
                     <div class="description-filler"></div>
                     <p class="description-info">
