Refonte d'une partie du design

--- a/public/contact.html
+++ b/public/contact.html
@@ -39,6 +39,7 @@
         <p class="warning">Merci de ne pas déposer de spam/pubs, contact professionnel uniquement.
             Tout message inapproprié ne sera pas traité. En complétant ce formulaire, vous consentez à communiquer
             les informations demandées. Ces dernières ne sont pas collectées dans un but commercial.</p>
+        <div class="fill"></div>
         </main>
         <footer class="footer">
             <div class="links">
