--- a/public/project/alternance.html
+++ b/public/project/alternance.html
@@ -60,7 +60,7 @@
                     </p>
                     <div class="description-filler"></div>
                     <div class="description-picture-area">
-                        <img src="../img/iut.PNG" class="description-picture">
+                        <img src="../img/iut.jpg" class="description-picture">
                     </div>
                 </div>
             </div>
