Amélioration de profil.html

--- a/public/profil.html
+++ b/public/profil.html
@@ -40,7 +40,7 @@
             <div class="skills-area">
                 <h1 class="skills-title">Compétences</h1>
                 <div class="skills">
-                    <div class="skills-professionnal">
+                    <div class="skills-left">
                         <h1>Compétences professionnelles</h1>
                         <ul>
                             <li>Travailler en équipe</li>
@@ -48,7 +48,7 @@
                             <li>Trouver des solutions</li>
                         </ul>
                     </div>
-                    <div class="skills-proglanguages">
+                    <div class="skills-middle">
                         <h1>Langages de programmations</h1>
                         <ul>
                             <li>Python</li>
@@ -56,12 +56,35 @@
                             <li>Javascript</li>
                         </ul>
                     </div>
-                    <div class="skills-speaklanguages">
+                    <div class="skills-right">
                         <h1>Langues parlées</h1>
                         <ul>
                             <li>Français (natif)</li>
                             <li>Anglais (B2 non certifié)</li>
                             <li>Allemand (A2 non certifié)</li>
+                        </ul>
+                    </div>
+                    <div class="skills-left">
+                        <h1>IDE</h1>
+                        <ul>
+                            <li>Visual Studio Code</li>
+                            <li>JetBrains (Pycharm et PhpStorm)</li>
+                        </ul>
+                    </div>
+                    <div class="skills-middle">
+                        <h1>Framework</h1>
+                        <ul>
+                            <li>Symfony</li>
+                        </ul>
+                    </div>
+                    <div class="skills-right">
+                        <h1>Autres</h1>
+                        <ul>
+                            <li>Manager de dépendances : Composer (PHP)</li>
+                            <li>OS : Windows / Linux</li>
+                            <li>Git</li>
+                            <li>UML</li>
+                            <li>SQL Oracle et MySql</li>
                         </ul>
                     </div>
                 </div>
@@ -105,7 +128,9 @@
                 </div>
             </div>
             <div class="downloadable">
-                <a href="downloadable/cv-test-site.pdf" class="download" download="cv-rdurand" target="_blank">télécharger mon cv</a>
+                <h1 class="downloadable-title">Curriculum Vitae (CV)</h1>
+                <img src="img/cv-site.png" alt="Aperçu de mon cv" class="downloadable-picture">
+                <a href="downloadable/cv-site.pdf" class="download" download="cv-rdurand" target="_blank">Télécharger mon CV</a>
             </div>
         </main>
         <footer class="footer">
