--- a/public/index.html
+++ b/public/index.html
@@ -103,6 +103,16 @@
                 </a>
             </div>
         </footer>
+        <div class="cookie-consent">
+            <p class="cookie-consent-info">
+                Ce site utilise des cookies internes pour conserver vos préférences (choix de langue). <br>
+                Nous n'utilisons pas de cookies tiers et les cookies ne sont pas utilisés à des fins commerciales.
+            </p>
+            <div class="cookie-consent-check">
+                <button class="cookie-consent-refuse">Je refuse</button>
+                <button class="cookie-consent-accept">J'accepte</button>
+            </div>
+        </div>
         <script>
             window.onscroll = function() {myFunction()};
             
@@ -117,5 +127,6 @@
               }
             }
         </script>
+        <script src="js/cookie.js"></script>
     </body>
 </html>
