Amélioration cookie.js et implémentation d'un nav dynamique

--- a/public/help.html
+++ b/public/help.html
@@ -12,8 +12,12 @@
         <header class="header" id="myHeader">
             <div class="logo-area">
                 <a href="index.html" class="logo">
-                    <img src="img/logo/facebook_cover_photo_1.png" alt="logo">
+                    <img class="logo-large" src="img/logo/facebook_cover_photo_1.png" alt="logo">
+                    <img class="logo-mobile" src="img/logo/logo-only.png" alt="logo">
                 </a>
+                <button class="nav-hamburger">
+                    <img src="img/hamburger.png">
+                </button>
             </div>
             <div class="nav">
                 <div class="blank"></div>
@@ -22,6 +26,11 @@
                     <a href="projets.html" class="project-page">Projets</a>
                     <a href="contact.html" class="contact">Contact</a>
                 </div>
+            </div>
+            <div class="nav-mobile">
+                <a href="profil.html" class="profil">Mon profil</a>
+                <a href="projets.html" class="project-page">Projets</a>
+                <a href="contact.html" class="contact">Contact</a>
             </div>
         </header>
         <main class="content">
@@ -146,5 +155,6 @@
             }
             
         </script>
+        <script src="js/nav.js"></script>
     </body>
 </html>
